# craplib

./: .gitignore  CRAP-archive.7z
data/: spg.ini
data/shader/: Displacement.tcs  Displacement.tes  Displacement.vs  DisplacementMapping.fragmentshader  NormalMapping.vertexshader  Passthrough.vertexshader  StandardShading.fragmentshader  crap_shader.frag  crap_shader.vert  crop_shader.frag  crop_shader.vert  crup_shader.frag  crup_shader.vert  epr_fragmentshader.frag  epr_vertexshader.vert  fragmentshader_ape.frag  fragmentshader_ck.ps  fragmentshader_niki.ps  fragmentshader_normal.ps  fragmentshader_standard.ps  fragmentshader_texture.ps  vertexshader_ape.vs  vertexshader_ck.vert  vertexshader_niki.vs  vertexshader_normal.vert  vertexshader_normal.vs  vertexshader_standard.vs  vertexshader_texture.vs
data/textures/: brick_normal.tga  colored_color.tga  flowers_color.tga  flowers_normal.tga  flowers_specular.tga  nveye-color.tga  nveye-height.tga  nveye-normal.tga  seafloor_bump.dds  stone-height.tga  stone-normal.tga  stone_diffuse.tga  stone_height.tga  stone_normal.tga  vene_specular.tga  (+1 more)
doc/: Doxyfile
source/: CMakeLists.txt
source/SPG/: CMakeLists.txt  camera.cpp  camera.h  contentmanager.cpp  contentmanager.h  geometrycontent.cpp  geometrycontent.h  geometryfile.cpp  geometryfile.h  indexedgeometry.cpp  indexgeometry.h  main.cpp  openglshader.cpp  opengltexture.cpp  opengltexture.h  openglvbo.h  precompiled.h  sbo.cpp  sbo.h  shaderconent.cpp  shadercontent.h  shaderfile.cpp  shaderfile.h  shadermanager.cpp  shadermanager.h  staticmodel.h  stringhash.h  tangentspace.cpp  tbo.cpp  tbo.h  texturecontent.cpp  texturecontent.h  texturefile.cpp  texturefile.h  vbo.cpp  vbo.h
source/crapengine/include/: CMakeLists.txt
source/crapengine/include/core/: CMakeLists.txt  component.h
source/crapengine/include/files/: CMakeLists.txt  geometryfile.h  wavefile.h
source/crapengine/include/opengl/: CMakeLists.txt  buffer.h  texture.h
source/crapengine/source/: CMakeLists.txt
source/crapengine/source/files/: CMakeLists.txt  wavefile.cpp
source/crapengine/source/opengl/: CMakeLists.txt  buffer.cpp  shader.cpp  texture.cpp
source/craplib/: CMakeLists.txt
source/craplib/include/: CMakeLists.txt  crap.h
source/craplib/include/audio/: CMakeLists.txt  audio.h  audiodevice.h  test.h  wavefile.h
source/craplib/include/config/: CMakeLists.txt  config_endianness.h  config_logger.h  config_memory.h  config_network.h  config_simd.h  config_sound.h  config_threading.h  config_types.h
source/craplib/include/container/: CMakeLists.txt  binarytree.h  bitmask.h  fixedstring.h  indexedarray.h  intrusivelist.h  list.h  map.h  pair.h  queue.h  stack.h  staticstring.h  string.h  treemap.h  treenode.h  vector.h
source/craplib/include/control/: CMakeLists.txt  asserts.h  breakpoints.h  compare.h  converter.h  cpuinfo.h  craptime.h  endian.h  limits.h  logger.h
source/craplib/include/files/: CMakeLists.txt  file.h  fileheaders.h  imagefile.h
source/craplib/include/geometry/: geometry.h  vector2.h
source/craplib/include/math/: CMakeLists.txt  basemath.h  geometry.h  matrix3.h  matrix4.h  random.h
source/craplib/include/memory/: CMakeLists.txt  allocator.h  allocatordefault.h  linearallocator.h  memorymanager.h  memorypool.h  poolallocator.h  stackallocator.h  stlallocatordefault.h  stlallocatormalloc.h  stlallocatorstatic.h
source/craplib/include/network/: CMakeLists.txt  addressip4.h  addressip6.h  packet.h  sockets.h
source/craplib/include/opengl/: CMakeLists.txt  buffer.h  controller.h  keyboard.h  mouse.h  openglbuffer.h  opengldata.h  opengljoystick.h  openglkeyboard.h  openglmouse.h  openglshader.cpp  openglshader.h  opengltexture.h  openglvertex.h  openglwindow.h  renderwindow.h  setup.h  shader.h  texture.h  wavefrontfile.cpp  wavefrontfile.h
source/craplib/include/threading/: CMakeLists.txt  functorthread.h  mutex.h  runnable.h  runthread.h  semaphore.h  sleep.h
source/craplib/source/: CMakeLists.txt
source/craplib/source/audio/: CMakeLists.txt  audio.cpp  audiodevice.cpp  test.cpp  wavefile.cpp
source/craplib/source/container/: CMakeLists.txt  bitmask.cpp
source/craplib/source/control/: CMakeLists.txt  cpuinfo.cpp  craptime.cpp  limits.cpp  logger.cpp  zero.cpp
source/craplib/source/files/: CMakeLists.txt  file.cpp  geometryfile.cpp  imagefile.cpp
source/craplib/source/math/: crapmath.cpp
source/craplib/source/memory/: CMakeLists.txt  memorypool.cpp
source/craplib/source/network/: CMakeLists.txt  addressip4.cpp  addressip6.cpp  networkheaders.cpp
source/craplib/source/opengl/: CMakeLists.txt  buffer.cpp  controller.cpp  keyboard.cpp  mouse.cpp  openglbuffer.cpp  opengldata.cpp  opengljoystick.cpp  openglkeyboard.cpp  openglmouse.cpp  openglshader.cpp  opengltexture.cpp  openglvbo.cpp  openglvertex.cpp  openglwindow.cpp  renderwindow.cpp  setup.cpp  shader.cpp  texture.cpp  wavefrontfile.cpp
source/craplib/source/threading/: CMakeLists.txt  mutex.cpp  runnable.cpp  runthread.cpp  scopelock.cpp  semaphore.cpp  sleep.cpp
source/opengltest/: CMakeLists.txt  main.cpp
source/performancetests/: CMakeLists.txt  main.cpp
source/unittests/: CMakeLists.txt
source/unittests/source/: CMakeLists.txt  config_compilers.cpp  config_endianess.cpp  config_files.cpp  config_math.cpp  config_memory.cpp  config_platforms.cpp  config_processors.cpp  config_simd.cpp  config_threading.cpp  config_types.cpp  container_binarytree.cpp  container_bitmask.cpp  container_bitset.cpp  container_indexedarray.cpp  container_intrusivelist.cpp  container_list.cpp  container_map.cpp  container_pair.cpp  container_queue.cpp  container_stack.cpp  container_staticqueue.cpp  container_staticstack.cpp  container_staticstring.cpp  container_string.cpp  container_treemap.cpp  container_treenode.cpp  container_vector.cpp  control_asserts.cpp  control_breakpoints.cpp  control_checkvtable.cpp  control_compare.cpp  control_converter.cpp  control_copyarray.cpp  control_copyobject.cpp  control_cpuinfo.cpp  control_endian.cpp  control_limits.cpp  control_logger.cpp  control_time.cpp  (+28 more)
(+1371 files in other folders)
