INCLUDE_DIRECTORIES("../craplib/include")
INCLUDE_DIRECTORIES(${CRAPLIB_PATH}/glm)
INCLUDE_DIRECTORIES(${CRAPLIB_PATH}/glew/include/)
INCLUDE_DIRECTORIES(${CRAPLIB_PATH}/openal/include/
INCLUDE_DIRECTORIES(${CRAPLIB_PATH}/glfw/lib/)
INCLUDE_DIRECTORIES(${CRAPLIB_PATH}/glfw/include/))

IF(WIN32)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS(-DWIN32)
	ADD_DEFINITIONS(-D_DEBUG)
	ADD_DEFINITIONS(-D_CONSOLE)
ENDIF(WIN32)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/crap)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/openal)

SET(SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/contentmanager.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/indexedgeometry.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/opengldata.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/openglshader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/opengltexture.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/openglvbo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/openglvertex.cpp
	)
SET(HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/contentmanager.h
	${CMAKE_CURRENT_SOURCE_DIR}/indexgeometry.h
	${CMAKE_CURRENT_SOURCE_DIR}/opengldata.h
	${CMAKE_CURRENT_SOURCE_DIR}/openglshader.h
	${CMAKE_CURRENT_SOURCE_DIR}/opengltexture.h
	${CMAKE_CURRENT_SOURCE_DIR}/openglvbo.h
	${CMAKE_CURRENT_SOURCE_DIR}/openglvertex.h
	${CMAKE_CURRENT_SOURCE_DIR}/precompiled.h
	${CMAKE_CURRENT_SOURCE_DIR}/stringhash.h
	)


ADD_EXECUTABLE(SPGTest ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(SPGTest crap)