INCLUDE_DIRECTORIES("../craplib/include")
INCLUDE_DIRECTORIES("../../libraries/glm")

IF(WIN32)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
	ADD_DEFINITIONS(-DWIN32)
	ADD_DEFINITIONS(-D_DEBUG)
	#ADD_DEFINITIONS(-D_CONSOLE)
ENDIF(WIN32)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR})

ADD_EXECUTABLE(PerfTest main.cpp)
TARGET_LINK_LIBRARIES(PerfTest crap)