ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/audio)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/container)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/control)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/files)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/memory)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/network)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/opengl)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/threading)

set(SOURCES
   ${SOURCES}
   PARENT_SCOPE
)
